--- a/navigator/package.xml
+++ b/navigator/package.xml
@@ -20,6 +20,8 @@
   <run_depend>rosutil</run_depend>
   <build_depend>hardware_msgs</build_depend>
   <run_depend>hardware_msgs</run_depend>
+  <build_depend>mathutil</build_depend>
+  <run_depend>mathutil</run_depend>
 
   <export>
 
